2010-03-22  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MonoDevelop.Core.addin.xml: Bumped MD version.

2010-03-19  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/CopyDomVisitor.cs: Handle parameter
	  location.

2010-03-19  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomMethod.cs:
	* MonoDevelop.Projects.Dom/DomProperty.cs:
	* MonoDevelop.Projects.Dom/DomParameter.cs: Correctly set
	  parameter declaring member.

2010-03-19  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Policies/PolicyService.cs: Improved
	  differential serialization. It can now properly serialize
	  lists where items are added/removed.

	* MonoDevelop.Projects.Policies/PolicyBag.cs: Don't abort
	  project loading if a policy can't be found.

2010-03-18  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core.Instrumentation/TimeCounter.cs: This
	  doesn't need to be public.

	* MonoDevelop.Core.Instrumentation/Counter.cs: Use better name
	  for the duration property.

	* MonoDevelop.Core.Instrumentation/TimerCounter.cs: Added some
	  statistics.

2010-03-17  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs: Don't
	  completely fail the loading of the solution data if one of
	  the projects fails.

2010-03-17  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
	  Bump db version because serialized headers are referencing
	  the old MD.Projects assembly.

	* MonoDevelop.Projects.Dom/DomType.cs: Added null check.

2010-03-17  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs:
	* MonoDevelop.Projects.Dom.Serialization/FileEntry.cs:
	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs:
	* MonoDevelop.Projects.Dom.Parser/TypeResolverVisitor.cs:
	* MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
	* MonoDevelop.Projects.Dom.MemoryDatabase/ProjectMemoryProjectDom.cs: